--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "Fun little discord bot project",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "mZheng",
   "license": "MIT",
