--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "axios": "^0.21.1",
+    "discord-tts": "^1.0.3",
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "yt-search": "^2.5.2",
+    "ytdl-core": "^4.4.4"
   }
 }
