--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
+    "owlbot-js": "^2.0.2",
     "yt-search": "^2.5.2",
     "ytdl-core": "^4.4.5"
   }
